facendo la domuntazione di ogni file

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,18 +12,25 @@
     background-color:#D0EAFF;
 }
 
+/* mode letra */
 
+    .orbitron-uniquifier{
+        font-family: "Orbitron", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: weight;
+        font-style: normal;
+    }
 
-.montserrat-uniquifier {
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
-}
-
-.montserrat-medium {
+    .montserrat-uniquifier {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: weight;
     font-style: normal;
-  }
+    }
+
+    .montserrat-medium {
+        font-family: "Montserrat", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 500;
+        font-style: normal;
+    }
